统一分类及首页展示数据模型
